Solucion definitiva sin caracteres especiales

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=apihorariomed
 server.port=8080
 
-# --- CONFIGURACIÓN H2 (PARA RENDER) ---
+# CONFIGURACION H2
 spring.datasource.url=jdbc:h2:mem:horariodb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -9,5 +9,4 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
-# Desactivar seguridad SSL estricta
-spring.ssl.bundle.jks.web-server.key.alias=SS
+# Desactivar seguridad SSL
